--- a/RealmTimers.xcodeproj/xcshareddata/xcschemes/RealmTimers - D.xcscheme
+++ b/RealmTimers.xcodeproj/xcshareddata/xcschemes/RealmTimers - D.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1020"
+   LastUpgradeVersion = "1100"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "96B1962D2315B920001A982B"
-               BuildableName = "RealmTimers DEV.app"
-               BlueprintName = "RealmTimers DEV"
+               BlueprintIdentifier = "798B9902234EA05600DC227A"
+               BuildableName = "RealmTimers - D.app"
+               BlueprintName = "RealmTimers - D"
                ReferencedContainer = "container:RealmTimers.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -27,26 +27,7 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "96B1962D2315B920001A982B"
-            BuildableName = "RealmTimers DEV.app"
-            BlueprintName = "RealmTimers DEV"
-            ReferencedContainer = "container:RealmTimers.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "79D609D92320155A007127DF"
-               BuildableName = "RealmTimersTests.xctest"
-               BlueprintName = "RealmTimersTests"
-               ReferencedContainer = "container:RealmTimers.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -63,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "96B1962D2315B920001A982B"
-            BuildableName = "RealmTimers DEV.app"
-            BlueprintName = "RealmTimers DEV"
+            BlueprintIdentifier = "798B9902234EA05600DC227A"
+            BuildableName = "RealmTimers - D.app"
+            BlueprintName = "RealmTimers - D"
             ReferencedContainer = "container:RealmTimers.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -80,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "96B1962D2315B920001A982B"
-            BuildableName = "RealmTimers DEV.app"
-            BlueprintName = "RealmTimers DEV"
+            BlueprintIdentifier = "798B9902234EA05600DC227A"
+            BuildableName = "RealmTimers - D.app"
+            BlueprintName = "RealmTimers - D"
             ReferencedContainer = "container:RealmTimers.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
